test/Fail/Issue2862record.err
Issue2862record.agda:14.3-17: error: [DefinitionInDifferentModule]
Definition in different module than its type signature
when scope checking the declaration
  record R where
